incorrect host name

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=sdeuser
 POSTGRES_PASSWORD=sdepassword1234
 POSTGRES_DB=finance
-POSTGRES_HOST=ware
+POSTGRES_HOST=warehouse
 POSTGRES_PORT=5432
